--- a/Scripts/1.7 Creating Network Visualizations.ipynb
+++ b/Scripts/1.7 Creating Network Visualizations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ce1fb7d8-f87c-4fd6-8e35-815517147aaf",
    "metadata": {},
    "outputs": [
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: to be able to use all crisp methods, you need to install some additional packages:  {'bayanpy', 'graph_tool', 'wurlitzer', 'infomap'}\n",
-      "Note: to be able to use all crisp methods, you need to install some additional packages:  {'pyclustering', 'ASLPAw'}\n",
+      "Note: to be able to use all crisp methods, you need to install some additional packages:  {'wurlitzer', 'infomap', 'graph_tool', 'bayanpy'}\n",
+      "Note: to be able to use all crisp methods, you need to install some additional packages:  {'ASLPAw', 'pyclustering'}\n",
       "Note: to be able to use all crisp methods, you need to install some additional packages:  {'wurlitzer', 'infomap'}\n"
      ]
     }
@@ -31,7 +31,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from pyvis.network import Network\n",
-    "from cdlib import algorithms"
+    "from cdlib import algorithms\n",
+    "import leidenalg\n",
+    "import igraph"
    ]
   },
   {
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d1d29e88-b20a-4375-866c-10e35be1fd17",
    "metadata": {},
    "outputs": [
@@ -118,20 +120,19 @@
        "4  Germany    Spain      1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_path = \"C:/Users/henry/OneDrive/20th-century/country_relationships.csv\"\n",
-    "rel_df = pd.read_csv(file_path)\n",
+    "rel_df = df = pd.read_csv(\"../Data/country_relationships.csv\")\n",
     "rel_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "63a74690-3925-4448-b973-39c293316e05",
    "metadata": {},
    "outputs": [],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8c0685c5-d0ce-456a-9222-d6fceb02e551",
    "metadata": {},
    "outputs": [
@@ -168,9 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "645f8658-a469-4627-9525-fa6c0e3cfefc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -186,7 +189,7 @@
        "        <iframe\n",
        "            width=\"1000px\"\n",
        "            height=\"800px\"\n",
-       "            src=\"C:/Users/henry/OneDrive/20th-century/countries_network.html\"\n",
+       "            src=\"../Webpage/countries_network.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -194,10 +197,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f7e16a1b10>"
+       "<IPython.lib.display.IFrame at 0x1aff27c8d00>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,24 +213,12 @@
     "net.from_nx(G)\n",
     "net.show_buttons(filter_=True)\n",
     "net.repulsion()\n",
-    "net.show(\"C:/Users/henry/OneDrive/20th-century/countries_network.html\")"
+    "net.show(\"../Webpage/countries_network.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6086f198-46ed-462a-a879-c250fbae6678",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Importing leidenalg\n",
-    "import leidenalg\n",
-    "import igraph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f0b49108-4a66-47fe-adc9-0ebebd6cdbe2",
    "metadata": {},
    "outputs": [],
@@ -241,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "92788b4a-42cd-4ef8-ad0f-656f99166dc6",
    "metadata": {},
    "outputs": [
@@ -259,7 +250,7 @@
        "        <iframe\n",
        "            width=\"1300px\"\n",
        "            height=\"700px\"\n",
-       "            src=\"C:/Users/henry/OneDrive/20th-century/countries_communities.html\"\n",
+       "            src=\"../Webpage/countries_communities.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -267,10 +258,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f7e05efaf0>"
+       "<IPython.lib.display.IFrame at 0x1aff18e9720>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +272,7 @@
     "com_net.from_nx(G)\n",
     "com_net.show_buttons(filter_=True)\n",
     "com_net.repulsion()\n",
-    "com_net.show(\"C:/Users/henry/OneDrive/20th-century/countries_communities.html\")"
+    "com_net.show(\"../Webpage/countries_communities.html\")"
    ]
   },
   {
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "7cc5eff5-c02c-476e-a701-62a431078dda",
    "metadata": {},
    "outputs": [
@@ -328,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "b77fb821-9fb9-4b90-8ac0-1041a9638453",
    "metadata": {},
    "outputs": [
@@ -354,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "2cd1c0cc-33b6-4a57-bae1-bce37396c06d",
    "metadata": {},
    "outputs": [
@@ -393,13 +384,29 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83afc17a-5986-49c6-9956-fffedc7e4232",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73b24722-351d-443f-beac-d87905b8930c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:ner_env_310]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ner_env_310-py"
   },
   "language_info": {
    "codemirror_mode": {
